--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "next": "14.2.15",
     "react": "^18",
     "react-datepicker": "^7.5.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "postcss": "^8",
